# TransFit

./: .gitignore  MANIFEST.in  README.md  README_chinese.md  pyproject.toml  readme.md  readme_chinese.md  readme_zh.md
.github/workflows/: ci.yml  publish.yml
Log/: 2026-03-09-opensource-prep.md  2026-03-16-api-simplification.md
docs/: README_chinese.md  api_reference.md  api_reference.tex  api_reference_chinese.md  model_citations.md  model_parameter_reference.md  model_parameter_reference.tex  multiband_photometry_design.md  papers_using_transfit.md
examples/: Tutorial.ipynb  benchmark_csm_ode.py  physical_regression_and_convergence_tests.ipynb  test.ipynb  test_fit.ipynb  tutorial.ipynb  tutorial_zh.ipynb
examples/data/: SN1993j_lbol.txt  sn2007gr.csv
tests/: test_data_containers.py  test_import_and_sampler_dispatch.py  test_multiband_redesign.py  test_public_smoke.py
tests/regression/: test_csm_numba_ode.py  test_multiband_photometry.py  test_multiband_redesign.py
transfit/: __init__.py  api.py  constants.py  data.py  model_registry.py
transfit/model/: MagNi.py  Magnetar.py  Nickel.py  SC_Nickel.py  ScMagnetar.py  ScNickel.py  __init__.py  magnetar.py  magnetar_ni.py  nickel.py  scmagnetar.py
transfit/models/: __init__.py  csm.py  magnetar.py  magnetar_ni.py  nickel.py  sc_magnetar.py  sc_ni.py
transfit/modules/: __init__.py  fnu.py  interp.py  io.py  labels.py  likelihood.py  magnitudes.py  photometry.py  plot.py
transfit/modules/extinction/: __init__.py  apply.py  core.py  laws.py  normalize.py  resolve.py  serde.py
transfit/modules/filters/: __init__.py  core.py  normalize.py  registry.py  serde.py
transfit/modules/sed/: __init__.py  blackbody.py  cutoff_blackbody.py  serde.py
transfit/priors/: __init__.py  common.py  csm.py  iib.py  magnetar.py  magnetar_ni.py  nickel.py  nuisance.py  sc_magnetar.py  sc_ni.py  scni.py
transfit/samplers/: __init__.py  bilby.py  dynesty.py  emcee.py  likelihood.py  result.py  zeus.py
