[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfit"
version = "0.1.0"
description = "A light-curve fitting framework for astronomical transients"
readme = "readme.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Liangduan Liu", email = "liuld@ccnu.edu.cn" },
  { name = "Yuhao Zhang", email = "zhangyh2001@foxmail.com" },
]
keywords = [
  "astronomy",
  "astrophysics",
  "supernova",
  "transient",
  "light-curve",
  "mcmc",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "numba",
  "astropy",
  "scipy",
]

[project.optional-dependencies]
plot = ["corner"]
emcee = ["emcee"]
zeus = ["zeus-mcmc"]
dynesty = ["dynesty"]
fit = [
  "emcee",
  "zeus-mcmc",
  "dynesty",
]
all = [
  "corner",
  "emcee",
  "zeus-mcmc",
  "dynesty",
]

[project.urls]
Paper = "https://doi.org/10.3847/1538-4357/adfed6"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["transfit*"]
