[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfit"
version = "0.1.0"
description = "A light-curve fitting framework for astronomical transients"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Liangduan Liu", email = "liuld@ccnu.edu.cn" },
  { name = "Yuhao Zhang", email = "zhangyh2001@foxmail.com" },
]
keywords = [
  "astronomy",
  "astrophysics",
  "supernova",
  "transient",
  "light-curve",
  "mcmc",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "numba",
  "astropy",
  "scipy",
]

[project.optional-dependencies]
plot = ["matplotlib", "corner"]
examples = ["matplotlib", "pandas"]
emcee = ["emcee"]
zeus = ["zeus-mcmc"]
dynesty = ["dynesty"]
dev = ["build", "pytest"]
fit = [
  "emcee",
  "zeus-mcmc",
  "dynesty",
]
all = [
  "matplotlib",
  "pandas",
  "corner",
  "emcee",
  "zeus-mcmc",
  "dynesty",
]

[project.urls]
Paper = "https://doi.org/10.3847/1538-4357/adfed6"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["transfit*"]
